connected button to code

--- a/Dicee/Dicee/Base.lproj/Main.storyboard
+++ b/Dicee/Dicee/Base.lproj/Main.storyboard
@@ -50,6 +50,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="diceImageView1" destination="IHy-BT-0lf" id="VZw-VT-lNq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
